# ChessEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/rules/: karpathy-guidelines.md
.claude/scripts/: statusline.sh
docs/perf/: nps-baseline.md
docs/superpowers/plans/: 2026-07-12-tapered-positional-eval.md  2026-07-13-principal-variation-search.md  2026-07-13-reverse-futility-pruning.md  2026-07-13-static-exchange-evaluation.md  2026-07-19-msvc-native-arch-avx2.md  2026-07-21-futility-pruning.md  2026-07-21-lmr-log-reduction.md  2026-07-21-pawn-structure-eval.md
docs/superpowers/specs/: 2026-07-12-tapered-positional-eval-design.md  2026-07-13-principal-variation-search-design.md  2026-07-13-reverse-futility-pruning-design.md  2026-07-13-static-exchange-evaluation-design.md  2026-07-19-msvc-native-arch-avx2-design.md  2026-07-21-futility-pruning-design.md  2026-07-21-lmr-log-reduction-design.md  2026-07-21-pawn-structure-eval-design.md
src/: attacks.cpp  attacks.hpp  bench.cpp  bench.hpp  bitboard.cpp  bitboard.hpp  eval.cpp  eval.hpp  eval_tables.hpp  main.cpp  move.hpp  movegen.cpp  movegen.hpp  pawn_eval.cpp  pawn_eval.hpp  perft.cpp  perft.hpp  position.cpp  position.hpp  search.cpp  search.hpp  see.cpp  see.hpp  tt.cpp  tt.hpp  types.hpp  uci.cpp  uci.hpp  zobrist.cpp  zobrist.hpp
tests/: test_attacks.cpp  test_bench.cpp  test_bitboard.cpp  test_eval.cpp  test_main.cpp  test_movegen.cpp  test_perft.cpp  test_position.cpp  test_search.cpp  test_see.cpp  test_tt.cpp  test_types.cpp  test_uci.cpp  test_zobrist.cpp
tools/sprt/: .gitignore  README.md  run_sprt.sh  setup.sh
